// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Avatar snapshots with default props 1`] = `
<div>
  <span
    class="sc-bczSft kMguGK"
  >
    <img
      alt="some image"
      class="sc-gsnScm fsXMdr"
      src="some_url"
    />
  </span>
</div>
`;

exports[`Component: Avatar snapshots with other props 1`] = `
<div>
  <span
    class="sc-bczSft kMguGK"
  >
    <img
      alt="alt text"
      class="sc-gsnScm fsXMdr"
      src="some_url"
    />
  </span>
</div>
`;
